@@ -26,7 +26,7 @@ class zopeView(Directive):
     store = ONCE_NOBASE
 
     def factory(self, name, context=None, template=None, layer=None, 
-                layout=None, permission='', default=False, decorator=None):
+                layout='', permission='', default=False, decorator=None):
         return name, context, layer, template, \
             layout, permission, default, decorator, getInfo()
 
@@ -36,7 +36,7 @@ class pyramidView(Directive):
     store = ONCE_NOBASE
 
     def factory(self, name, context=None, template=None, layer=None, 
-                layout=None, permission='', default=False, decorator=None):
+                layout='', permission='', default=False, decorator=None):
         return name, context, layer, template, \
             layout, permission, default, decorator, getInfo()
 
